  missing. (Daniel Hahler)

- Failure of autosave which was silently ignored is now handled and reported.
  (SF.net Bug #1775281 - Kazutoshi Satoda)

- IllegalCharsetNameException was not handled. It could be thrown for XML
  encoding declaration or [Reload with Encoding] action. (Kazutoshi Satoda)
  (This bug was reported by Andre Rudlaff as SF.net Patch #1789707)
}}}
{{{ Miscellaneous

- ViewUpdate.CLOSED is now sent for all views. Previously, the view from where
  the exit request originated would fail to send a ViewUpdate.CLOSED message.
  (Marcelo Vanzin)

- When clearing all hypersearch results the Hypersearch dockable panel will
  hide (Matthieu Casanova)

- The release note of the plugins in the PluginManager install panel now displays
  html (Matthieu Casanova)

- When dropping a directory on the textarea, the VFSBrowser will now browse to it
  (Matthieu Casanova)

- A new action "edit-syntax-style" that opens a dialog to change the token
  under the caret (patch #1788847) (Shlomy Reinstein)

- The plugin install panel now has a sortable column containing the release date
  of the plugin (Matthieu Casanova)
}}}
{{{ Editing

- Improvements to PHP edit mode (patch #1740618, bugs #1716134, #1504855)
  (Daniel Hahler)
  
- Added RFC edit mode (Matthieu Casanova)

- reST mode: improved handling of comments and literal blocks (SF: #1748471)
  (strank)

- Added HLSL edit mode (SF: #1724921) (Adam Sawicki)

- Added CLIPS edit mode (SF: #1745999) (Orhan Alkan)

- Added macros Editing/Open_Line_(Above|Below).bsh (Scott LeBaron) (sf: 1746798)

}}}
{{{ API Changes

- new class: org.gjt.sp.jedit.msg.VFSPathSelected EBMessage gets sent
  whenever a node in the VFSBrowser is clicked. (#1730075 - Alan Ezust)

- org.gjt.sp.jedit.gui.CompletionPopup has been extracted to provide basic
  UI of word completion. (SF.net patch #1752044 - Kazutoshi Satoda).

- org.gjt.sp.jedit.io.VFS.BROWSE_CAP is not deprecated anymore and browseable